show all results from query using template

--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
                 <button id="searchButton">Search</button>
             </nav>
         </header>
-        <figure>
-            <img class="picture" width="400" />
+        <main>
+            <div id="container"></div>
+        </main>
+    </body>
+    <template class="resultCard">
+        <figure class="artwork">
+            <img class="picture" height="300" />
             <figcaption class="information">
-                <span id="title"></span> - <span id="author"></span> -
-                <span id="year"></span>
+                <span class="title"></span><br />
+                <span class="author"></span><br />
+                <span class="year"></span>
             </figcaption>
         </figure>
-    </body>
+    </template>
 </html>
