--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
                     placeholder="Vincent van Gogh"
                 />
                 <button id="searchButton">Search</button>
+                <button id="order">Order</button>
             </nav>
         </header>
         <main>
             <div id="container"></div>
         </main>
     </body>
-    <template class="resultCard">
-        <figure class="artwork">
+    <template id="artwork">
+        <figure>
             <img class="picture" height="300" />
             <figcaption class="information">
                 <span class="title"></span><br />
