content now only prints after finishing fetch

--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
     </body>
     <template id="artwork">
         <figure>
-            <img class="picture" height="300" />
-            <figcaption class="information">
-                <span class="title"></span><br />
-                <span class="author"></span><br />
-                <span class="year"></span>
-            </figcaption>
+            <div>
+                <img class="picture" />
+                <figcaption class="information">
+                    <span class="title"></span><br />
+                    <span class="author"></span><br />
+                    <span class="year"></span>
+                </figcaption>
+            </div>
         </figure>
     </template>
 </html>
