simplified search function. Added status on search

--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
         </header>
         <main>
             <div class="container-status">
-                <h3 class="status-message">Showing</h3>
+                <h3 class="status-message"></h3>
             </div>
             <div class="container-artworks"></div>
         </main>
     </body>
     <template id="artworks">
         <div class="artwork">
-            <img class="picture" />
+            <a href="#top">
+                <img class="picture" />
+            </a>
             <div class="information">
                 <p class="title"></p>
                 <p class="author"></p>
