added loader placeholder

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <header class="header-top">
             <a href="#top">
                 <h1>
-                    <span class="material-symbols-outlined"> palette </span> Art
-                    Gallery
+                    <span class="material-symbols-outlined filled">
+                        palette
+                    </span>
+                    Art Gallery
                 </h1>
             </a>
             <div class="container-search">
@@ -45,6 +47,7 @@
                 <div class="spinner"></div>
             </div>
             <div class="container-artworks"></div>
+            <div class="loader"></div>
         </main>
     </body>
     <template id="artworks">
@@ -57,12 +60,6 @@
                 <p class="author"></p>
                 <p class="year"></p>
             </div>
-        </div>
-    </template>
-    <template id="placeholders">
-        <div class="placeholder">
-            <div class="placeholder-image"></div>
-            <div class="placeholder-text"></div>
         </div>
     </template>
 </html>
