disable input until current search is finished

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     placeholder="Search"
                     aria-label="search"
                     spellcheck="false"
+                    autocomplete="off"
                 />
                 <button
                     id="search-button"
@@ -43,7 +44,7 @@
         </header>
         <main>
             <div class="container-status">
-                <h3 class="status-message"></h3>
+                <h2 class="status-message"></h2>
                 <div class="spinner"></div>
             </div>
             <div class="container-artworks"></div>
