basic details view

--- a/detail.html
+++ b/detail.html
@@ -4,9 +4,30 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Miguel Mañas" />
-        <script src="js/main.js" defer></script>
+        <script src="js/detail.js" defer></script>
         <link rel="stylesheet" href="css/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+        />
         <title>Art Gallery</title>
     </head>
-    <body></body>
+    <body>
+        <header class="header-top">
+            <a href="#top">
+                <h1>
+                    <span class="material-symbols-outlined filled">
+                        palette
+                    </span>
+                    Art Gallery
+                </h1>
+            </a>
+        </header>
+        <main>
+            <button id="button-back">Go back</button>
+            <div class="artwork-detail">
+                <img height="400" />
+            </div>
+        </main>
+    </body>
 </html>
