--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </body>
     <template id="artworks">
         <div class="artwork">
-            <a href="#top">
+            <a class="detail-link">
                 <img class="picture" />
             </a>
             <div class="information">
