updated details using id

--- a/detail.html
+++ b/detail.html
@@ -28,6 +28,11 @@
             <div class="artwork-detail">
                 <img height="400" />
             </div>
+            <div class="detail-info">
+                <p class="detail-title"></p>
+                <p class="detail-author"></p>
+                <p class="detail-year"></p>
+            </div>
         </main>
     </body>
 </html>
