details view styles

--- a/detail.html
+++ b/detail.html
@@ -24,14 +24,21 @@
             </a>
         </header>
         <main>
-            <button id="button-back">Go back</button>
-            <div class="artwork-detail">
-                <img height="400" />
+            <div class="container-back">
+                <button id="button-back">
+                    <span class="material-symbols-outlined">arrow_back</span>
+                    Back to results
+                </button>
             </div>
-            <div class="detail-info">
-                <p class="detail-title"></p>
-                <p class="detail-author"></p>
-                <p class="detail-year"></p>
+            <div class="container-detail">
+                <div class="artwork-detail">
+                    <a><img class="detail-picture" /></a>
+                </div>
+                <div class="detail-info">
+                    <h2 class="detail-title"></h2>
+                    <p class="detail-author"></p>
+                    <p class="detail-year"></p>
+                </div>
             </div>
         </main>
     </body>
