--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </header>
         <main>
             <div class="container-status">
-                <h2 class="status-message"></h2>
+                <span class="status-message"></span>
                 <div class="spinner"></div>
             </div>
             <div class="container-artworks"></div>
@@ -54,7 +54,7 @@
     <template id="artworks">
         <div class="artwork">
             <a class="detail-link">
-                <img class="picture" />
+                <img class="picture" loading="lazy" />
             </a>
             <div class="information">
                 <p class="title"></p>
