fav button class toggle

--- a/detail.html
+++ b/detail.html
@@ -16,9 +16,7 @@
         <header class="header-top">
             <a href="#top">
                 <h1>
-                    <span class="material-symbols-outlined filled">
-                        palette
-                    </span>
+                    <span class="material-symbols-outlined"> palette </span>
                     Art Gallery
                 </h1>
             </a>
