--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <header class="header-top">
             <a class="header-title" href="#top">
                 <h1>
-                    <span class="material-symbols-outlined filled">
-                        palette
-                    </span>
+                    <span class="material-symbols-outlined"> palette </span>
                     Art Gallery
                 </h1>
             </a>
@@ -58,9 +56,7 @@
                     <img class="picture" loading="lazy" />
                 </a>
                 <button class="favorite-button" title="Add favorite">
-                    <span class="material-symbols-outlined filled"
-                        >favorite</span
-                    >
+                    <span class="material-symbols-outlined">favorite</span>
                 </button>
             </div>
             <div class="information">
