--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                     spellcheck="false"
                     autocomplete="off"
                 />
+                <select id="search-select">
+                    <option value="">All</option>
+                    <option value="title">Title</option>
+                    <option value="artist-culture">Artist</option>
+                </select>
                 <button
                     id="search-button"
                     type="submit"
@@ -38,11 +43,6 @@
                 >
                     <span class="material-symbols-outlined">search</span>
                 </button>
-                <select class="search-select">
-                    <option value="">All</option>
-                    <option value="title">Title</option>
-                    <option value="artist-culture">Artist or Culture</option>
-                </select>
             </div>
             <div class="container-favorite-theme">
                 <a class="link-favorites">
@@ -55,31 +55,22 @@
             </div>
         </header>
         <main>
-            <div class="container-status-filter">
+            <div class="container-status-sort">
                 <div class="container-status">
                     <span class="status-message"></span>
                     <div class="spinner"></div>
                 </div>
-                <div class="container-filter">
-                    <label
-                        ><span>Filter by</span
-                        ><input type="checkbox" />Highlights</label
-                    >
-                    <label
-                        >Sort by<select class="sort-select" name="sort">
-                            <option value="relevance" selected>
-                                Relevance
-                            </option>
-                            <option value="title">Title (A-Z)</option>
-                            <option value="title-reverse">Title (Z-A)</option>
-                            <option value="author">Author (A-Z)</option>
-                            <option value="author-reverse">Author (Z-A)</option>
-                            <option value="date">Date (Old to New)</option>
-                            <option value="date-reverse">
-                                Date (New to Old)
-                            </option>
-                        </select></label
-                    >
+                <div class="container-sort">
+                    <label for="sort-select">Sort by</label>
+                    <select id="sort-select" name="sort">
+                        <option value="relevance" selected>Relevance</option>
+                        <option value="title">Title (A-Z)</option>
+                        <option value="title-reverse">Title (Z-A)</option>
+                        <option value="author">Author (A-Z)</option>
+                        <option value="author-reverse">Author (Z-A)</option>
+                        <option value="date">Date (Old to New)</option>
+                        <option value="date-reverse">Date (New to Old)</option>
+                    </select>
                 </div>
             </div>
             <div class="container-artworks"></div>
