--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 />
                 <select id="search-select">
                     <option value="">All</option>
-                    <option value="title">Title</option>
-                    <option value="artist-culture">Artist</option>
+                    <option value="title=true">Title</option>
+                    <option value="artistOrCulture=true">Artist</option>
                 </select>
                 <button
                     id="search-button"
@@ -61,16 +61,32 @@
                     <div class="spinner"></div>
                 </div>
                 <div class="container-sort">
-                    <label for="sort-select">Sort by</label>
-                    <select id="sort-select" name="sort">
-                        <option value="relevance" selected>Relevance</option>
-                        <option value="title">Title (A-Z)</option>
-                        <option value="title-reverse">Title (Z-A)</option>
-                        <option value="author">Author (A-Z)</option>
-                        <option value="author-reverse">Author (Z-A)</option>
-                        <option value="date">Date (Old to New)</option>
-                        <option value="date-reverse">Date (New to Old)</option>
-                    </select>
+                    <div>
+                        <label for="sort-select">Sort by</label>
+                        <select id="sort-select" name="sort">
+                            <option value="relevance" selected>
+                                Relevance
+                            </option>
+                            <option value="title">Title (A-Z)</option>
+                            <option value="title-reverse">Title (Z-A)</option>
+                            <option value="author">Author (A-Z)</option>
+                            <option value="author-reverse">Author (Z-A)</option>
+                            <option value="date">Date (Old to New)</option>
+                            <option value="date-reverse">
+                                Date (New to Old)
+                            </option>
+                        </select>
+                    </div>
+                    <div class="container-checkbox">
+                        <input
+                            id="highlight-checkbox"
+                            type="checkbox"
+                            checked
+                        />
+                        <label for="highlight-checkbox" id="highlight-label"
+                            >Highlights</label
+                        >
+                    </div>
                 </div>
             </div>
             <div class="container-artworks"></div>
