--- a/index.html
+++ b/index.html
@@ -78,11 +78,7 @@
                         </select>
                     </div>
                     <div class="container-checkbox">
-                        <input
-                            id="highlight-checkbox"
-                            type="checkbox"
-                            checked
-                        />
+                        <input id="highlight-checkbox" type="checkbox" />
                         <label for="highlight-checkbox" id="highlight-label"
                             >Highlights</label
                         >
