improved query restore and status when filtering

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="container-checkbox">
                         <input id="highlight-checkbox" type="checkbox" />
                         <label for="highlight-checkbox" id="highlight-label"
-                            >Highlights</label
+                            >Highlights only</label
                         >
                     </div>
                 </div>
