--- a/favorites.html
+++ b/favorites.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Miguel Mañas" />
-        <title>Art Gallery</title>
-        <script src="js/detail.js" type="module"></script>
+        <title>Art Gallery - Favorites</title>
+        <script src="js/favorites.js" type="module"></script>
         <link rel="stylesheet" href="css/style.css" />
         <link
             rel="stylesheet"
@@ -32,31 +33,6 @@
     </head>
     <body>
         <noscript>Please, enable Javascript to run this website</noscript>
-        <header class="header-top">
-            <a href="#top">
-                <h1>
-                    <span class="material-symbols-outlined"> palette </span>
-                    Art Gallery
-                </h1>
-            </a>
-        </header>
-        <main>
-            <div class="container-back">
-                <button id="button-back">
-                    <span class="material-symbols-outlined">arrow_back</span>
-                    Back to results
-                </button>
-            </div>
-            <div class="container-detail">
-                <div class="artwork-detail">
-                    <a><img class="detail-picture" /></a>
-                </div>
-                <div class="detail-info">
-                    <h2 class="detail-title"></h2>
-                    <p class="detail-author"></p>
-                    <p class="detail-year"></p>
-                </div>
-            </div>
-        </main>
+        <header class="header-top"></header>
     </body>
 </html>
