improved landing responsiveness. Random bg image

--- a/landing.html
+++ b/landing.html
@@ -63,7 +63,7 @@
             </div>
             <p>
                 Discover paintings from the greatest artists in history and save
-                all your favorite masterpieces.
+                all your favorite masterpieces
             </p>
         </div>
         <div class="background-image"></div>
