header and footer loaded from templates

--- a/detail.html
+++ b/detail.html
@@ -32,14 +32,7 @@
     </head>
     <body>
         <noscript>Please, enable Javascript to run this website</noscript>
-        <header class="header-top">
-            <a href="#top">
-                <h1>
-                    <span class="material-symbols-outlined"> palette </span>
-                    Art Gallery
-                </h1>
-            </a>
-        </header>
+        <header class="header-top"></header>
         <main>
             <div class="container-back">
                 <button id="button-back">
@@ -58,5 +51,6 @@
                 </div>
             </div>
         </main>
+        <footer></footer>
     </body>
 </html>
