--- a/index.html
+++ b/index.html
@@ -33,46 +33,7 @@
     </head>
     <body>
         <noscript>Please, enable Javascript to run this website</noscript>
-        <header class="header-top">
-            <a class="header-title" href="index.html">
-                <h1>
-                    <span class="material-symbols-outlined"> palette </span>
-                    Art Gallery
-                </h1>
-            </a>
-            <div class="container-search">
-                <input
-                    id="search-input"
-                    type="text"
-                    name="q"
-                    placeholder="Search"
-                    aria-label="search"
-                    spellcheck="false"
-                    autocomplete="off"
-                />
-                <select id="search-select">
-                    <option value="">All</option>
-                    <option value="title=true">Title</option>
-                    <option value="artistOrCulture=true">Artist</option>
-                </select>
-                <button
-                    id="search-button"
-                    type="submit"
-                    aria-label="submit search"
-                >
-                    <span class="material-symbols-outlined">search</span>
-                </button>
-            </div>
-            <div class="container-favorite-theme">
-                <a class="link-favorites" href="favorites.html">
-                    <span class="material-symbols-outlined">favorite</span
-                    >Favorites</a
-                >
-                <button class="button-round" title="Toggle Theme">
-                    <span class="material-symbols-outlined">light_mode</span>
-                </button>
-            </div>
-        </header>
+        <header class="header-top"></header>
         <main>
             <div class="container-status-sort">
                 <div class="container-status">
@@ -107,19 +68,7 @@
             <div class="loader"></div>
             <div class="container-artworks"></div>
         </main>
-        <footer>
-            <span>Miguel Mañas. 2023. </span> <br />
-            This website is powered by the
-            <a href="https://metmuseum.github.io/"
-                >The Metropolitan Museum of Art Collection API</a
-            >.
-            <br />
-            All data and images are in the
-            <a
-                href="https://www.metmuseum.org/about-the-met/policies-and-documents/open-access"
-                >public domain</a
-            >.
-        </footer>
+        <footer></footer>
         <a href="#top">
             <button class="back-to-top button-round">
                 <span class="material-symbols-outlined"> arrow_upward </span>
