--- a/favorites.html
+++ b/favorites.html
@@ -34,5 +34,6 @@
     <body>
         <noscript>Please, enable Javascript to run this website</noscript>
         <header class="header-top"></header>
+        <footer></footer>
     </body>
 </html>
