--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                             </option>
                             <option value="title">Title (A-Z)</option>
                             <option value="title-reverse">Title (Z-A)</option>
-                            <option value="author">Author (A-Z)</option>
-                            <option value="author-reverse">Author (Z-A)</option>
+                            <option value="artist">Artist (A-Z)</option>
+                            <option value="artist-reverse">Artist (Z-A)</option>
                             <option value="date">Date (Old to New)</option>
                             <option value="date-reverse">
                                 Date (New to Old)
