improved detail page. More data in class artwork

--- a/detail.html
+++ b/detail.html
@@ -42,12 +42,26 @@
             </div>
             <div class="container-detail">
                 <div class="artwork-detail">
-                    <a><img class="detail-picture" /></a>
+                    <a class="image-link" target="_blank"
+                        ><img class="detail-image"
+                    /></a>
                 </div>
                 <div class="detail-info">
                     <h2 class="detail-title"></h2>
-                    <p class="detail-author"></p>
-                    <p class="detail-year"></p>
+                    <dl class="detail-properties">
+                        <dt>Artist:</dt>
+                        <dd class="detail-artist"></dd>
+                        <dt>Date:</dt>
+                        <dd class="detail-date"></dd>
+                        <dt>Biography:</dt>
+                        <dd class="detail-artist-bio"></dd>
+                        <dt>Department:</dt>
+                        <dd class="detail-department"></dd>
+                        <dt>Medium:</dt>
+                        <dd class="detail-medium"></dd>
+                        <dt>Dimensions:</dt>
+                        <dd class="detail-dimensions"></dd>
+                    </dl>
                 </div>
             </div>
         </main>
