improved detail dl style

--- a/detail.html
+++ b/detail.html
@@ -49,18 +49,30 @@
                 <div class="detail-info">
                     <h2 class="detail-title"></h2>
                     <dl class="detail-properties">
-                        <dt>Artist:</dt>
-                        <dd class="detail-artist"></dd>
-                        <dt>Date:</dt>
-                        <dd class="detail-date"></dd>
-                        <dt>Biography:</dt>
-                        <dd class="detail-artist-bio"></dd>
-                        <dt>Department:</dt>
-                        <dd class="detail-department"></dd>
-                        <dt>Medium:</dt>
-                        <dd class="detail-medium"></dd>
-                        <dt>Dimensions:</dt>
-                        <dd class="detail-dimensions"></dd>
+                        <div class="detail-property">
+                            <dt>Artist:</dt>
+                            <dd class="detail-artist"></dd>
+                        </div>
+                        <div class="detail-property">
+                            <dt>Date:</dt>
+                            <dd class="detail-date"></dd>
+                        </div>
+                        <div class="detail-property">
+                            <dt>Biography:</dt>
+                            <dd class="detail-artist-bio"></dd>
+                        </div>
+                        <div class="detail-property">
+                            <dt>Department:</dt>
+                            <dd class="detail-department"></dd>
+                        </div>
+                        <div class="detail-property">
+                            <dt>Medium:</dt>
+                            <dd class="detail-medium"></dd>
+                        </div>
+                        <div class="detail-property">
+                            <dt>Dimensions:</dt>
+                            <dd class="detail-dimensions"></dd>
+                        </div>
                     </dl>
                 </div>
             </div>
