header fav link styling, improved details view

--- a/detail.html
+++ b/detail.html
@@ -47,7 +47,14 @@
                     /></a>
                 </div>
                 <div class="detail-info">
-                    <h2 class="detail-title"></h2>
+                    <div class="detail-header">
+                        <h2 class="detail-title"></h2>
+                        <button class="detail-favorite" title="Add favorite">
+                            <span class="material-symbols-outlined"
+                                >favorite</span
+                            >
+                        </button>
+                    </div>
                     <dl class="detail-properties">
                         <div class="detail-property">
                             <dt>Artist:</dt>
