--- a/templates.html
+++ b/templates.html
@@ -11,10 +11,8 @@
 <!-- Header Template  -->
 <template id="header">
     <a class="header-title" href="index.html">
-        <h1>
-            <span class="material-symbols-outlined"> palette </span>
-            Art Gallery
-        </h1>
+        <span class="material-symbols-outlined"> palette </span>
+        <h1>Art Gallery</h1>
     </a>
     <div class="container-search">
         <input
@@ -37,7 +35,8 @@
     </div>
     <div class="container-favorite-theme">
         <a class="link-favorites" href="favorites.html">
-            <span class="material-symbols-outlined">favorite</span>Favorites</a
+            <span class="material-symbols-outlined">favorite</span>
+            <p>Favorites</p></a
         >
         <button class="button-round" title="Toggle Theme">
             <span class="material-symbols-outlined">light_mode</span>
