favorites page with carrousel

--- a/detail.html
+++ b/detail.html
@@ -37,7 +37,7 @@
             <div class="container-back">
                 <button id="button-back">
                     <span class="material-symbols-outlined">arrow_back</span>
-                    Back to results
+                    Go back
                 </button>
             </div>
             <div class="container-detail">
@@ -49,7 +49,7 @@
                 <div class="detail-info">
                     <div class="detail-header">
                         <h2 class="detail-title"></h2>
-                        <button class="detail-favorite" title="Add favorite">
+                        <button class="detail-favorite">
                             <span class="material-symbols-outlined"
                                 >favorite</span
                             >
