search from landing page

--- a/detail.html
+++ b/detail.html
@@ -37,7 +37,7 @@
             <div class="container-back">
                 <button id="button-back">
                     <span class="material-symbols-outlined">arrow_back</span>
-                    Go back
+                    Back to results
                 </button>
             </div>
             <div class="container-detail">
