--- a/landing.html
+++ b/landing.html
@@ -31,7 +31,7 @@
         />
         <link rel="manifest" href="/site.webmanifest" />
     </head>
-    <body>
+    <body class="landing-body">
         <div class="container-landing">
             <h1 class="landing-title">
                 <span class="material-symbols-outlined"> palette </span>
@@ -66,6 +66,8 @@
                 all your favorite masterpieces
             </p>
         </div>
-        <div class="background-image"></div>
+        <div class="background-frame">
+            <div class="background-image"></div>
+        </div>
     </body>
 </html>
