--- a/favorites.html
+++ b/favorites.html
@@ -39,6 +39,10 @@
                 <div class="container-status">
                     <span class="status-message"></span>
                 </div>
+                <div class="container-remove">
+                    <span class="material-symbols-outlined">delete</span>
+                    <p>Remove favorites</p>
+                </div>
             </div>
             <section class="slider">
                 <div class="container-favorites"></div>
