--- a/detail.html
+++ b/detail.html
@@ -49,7 +49,7 @@
                 <div class="detail-info">
                     <div class="detail-header">
                         <h2 class="detail-title"></h2>
-                        <button class="detail-favorite">
+                        <button class="detail-favorite" title="Add favorite">
                             <span class="material-symbols-outlined"
                                 >favorite</span
                             >
