remove unneeded theme button

--- a/templates.html
+++ b/templates.html
@@ -33,14 +33,11 @@
             <span class="material-symbols-outlined">search</span>
         </button>
     </div>
-    <div class="container-favorite-theme">
+    <div class="container-favorite">
         <a class="link-favorites" href="favorites.html">
             <span class="material-symbols-outlined">favorite</span>
             <p>Favorites</p></a
         >
-        <button class="button-round" title="Toggle Theme">
-            <span class="material-symbols-outlined">light_mode</span>
-        </button>
     </div>
 </template>
 
